--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img id="weathericon">
         <p id="time"></p>
         <section id="history">
-            <h2><u>History:</u></h2>
+            <!-- <h2><u>History:</u></h2> -->
             
         </section>
         <section id="forecast">
